--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ var _hmt = _hmt || [];
 	</div>
 	
 	
-<!--高速版 评论区插件
+<!--高速版 评论区插件-->
 <div id="SOHUCS"></div>
-<script charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/changyan.js" ></script>-->
+<script charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/changyan.js" ></script>
 <script type="text/javascript">
     window.changyan.api.config({
         appid: 'cyskDoXl7',
